dev/apps/springboot/springboot.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: springboot
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  selector:
    matchLabels:
      app: springboot
      version: v1
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: springboot
        version: v1
    spec:

      containers:
        - name: springboot
          image: edisaac/springboot:latest3
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1

          ports:
            - containerPort: 8080
  revisionHistoryLimit: 2 # Limita el historial de revisiones a 3
